@@ -54,9 +54,9 @@ layer at (0,0) size 785x4424
           text run at (0,58) width 262: "different from that of the parent element."
       RenderBlock {P} at (0,427) size 769x72
         RenderImage {IMG} at (0,0) size 15x50
-        RenderInline {SPAN} at (0,0) size 128x19
-          RenderText {#text} at (15,29) size 128x19
-            text run at (15,29) width 128: "The first four words"
+        RenderInline {SPAN} at (0,0) size 128x18
+          RenderText {#text} at (15,30) size 128x18
+            text run at (15,30) width 128: "The first four words"
         RenderText {#text} at (142,36) size 766x36
           text run at (142,36) width 304: " in this sentence should be superscript-aligned. "
           text run at (445,36) width 321: "The font size of the subscripted text should not be"
@@ -400,9 +400,9 @@ layer at (0,0) size 785x4424
                   text run at (0,58) width 281: "be different from that of the parent element."
               RenderBlock {P} at (4,96) size 747x72
                 RenderImage {IMG} at (0,0) size 15x50
-                RenderInline {SPAN} at (0,0) size 128x19
-                  RenderText {#text} at (15,29) size 128x19
-                    text run at (15,29) width 128: "The first four words"
+                RenderInline {SPAN} at (0,0) size 128x18
+                  RenderText {#text} at (15,30) size 128x18
+                    text run at (15,30) width 128: "The first four words"
                 RenderText {#text} at (142,36) size 746x36
                   text run at (142,36) width 304: " in this sentence should be superscript-aligned. "
                   text run at (445,36) width 301: "The font size of the subscripted text should not"
